dark mode fix

--- a/apps/website/components/courses/course/course.module.css
+++ b/apps/website/components/courses/course/course.module.css
@@ -47,7 +47,6 @@
 
 .ReviewUrl a {
   font-size: 1.1rem;
-  color: hsl(220deg 100% 50%);
 }
 
 .Summary {
